--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "^18.3.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
